# ibkr-tws-api-playground

./: .gitignore  CONTRIBUTING.md  README-talib.md  README.md  SECURITY.md  auto_vertical_spread_trader.py  dot_env_example  goals.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sp500_tickers.csv  squeeze_pro.py
.github/: CI_SETUP.md
auto_vertical_spread_trader/: .bumpversion.cfg  CHANGELOG.md  GOVERNANCE.md  LICENSE  README.md  __init__.py  auto_vertical_spread_trader.py  config.py  executor.py  exits.py  mock_talib.py  monitor.py  pattern_utils.py  requirements.txt  runner.py  scans.py  setup.py  universe.py
benchmark_cache/: SYM000.pkl  SYM001.pkl  SYM002.pkl  SYM003.pkl  SYM004.pkl  SYM005.pkl  SYM006.pkl  SYM007.pkl  SYM008.pkl  SYM009.pkl  SYM010.pkl  SYM011.pkl  SYM012.pkl  SYM013.pkl  SYM014.pkl  SYM015.pkl  SYM016.pkl  SYM017.pkl  SYM018.pkl  SYM019.pkl  SYM020.pkl  SYM021.pkl  SYM022.pkl  SYM023.pkl  SYM024.pkl  SYM025.pkl  SYM026.pkl  SYM027.pkl  SYM028.pkl  SYM029.pkl  SYM030.pkl  SYM031.pkl  SYM032.pkl  SYM033.pkl  SYM034.pkl  SYM035.pkl  SYM036.pkl  SYM037.pkl  SYM038.pkl  SYM039.pkl  (+10 more)
docs/: conf.py  faq.rst  installation.rst
documentation/: IBKR-TWS-API-documentation.md  TWS-API-v9.72.md  ib-insync.md
instructions/: issues.md  organization.md  tweaks-2.md  tweaks-3.md  tweaks-4.md  tweaks.md
scripts/: benchmark.py  bootstrap_talib.ps1  bootstrap_talib.sh  fix_pandas_ta.py  fix_windows_talib.ps1  optimized_benchmark.py  simple_benchmark.py  test_import.py  test_macd.py  verify_pandas_ta.py  verify_talib.py  verify_talib.sh
(+21 files in other folders)
